<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            app:tint="@color/darkGreen"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:hint="@string/example_mail_com"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginHorizontal="40dp"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:hint="@string/contrase_a"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginBottom="20dp"

            />
        <Button
            android:id="@+id/btLogIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="@color/diedGreen"
            />
    </LinearLayout>


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_revert"
        android:padding="12dp"
        app:tint="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/volver_atr_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>