<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="24dp"
    tools:context=".WeightProgress">
    <ImageView
        android:id="@+id/btnAtras"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_revert"
        android:padding="10dp"
        app:tint="@color/text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        >
    <TextView
        android:id="@+id/tvTituloPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso_actual"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:letterSpacing="0.05"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/tvPesoValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_76kg"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginTop="8dp"
        />

    <ImageView
        android:id="@+id/imgGrafica"
        android:contentDescription="@string/grafica_de_peso"
        android:layout_width="300dp"
        android:layout_height="300dp"
        tools:src="@android:drawable/ic_menu_gallery"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNuevoPeso"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/introducir_nuevo_peso"
        app:cornerRadius="8dp"
        android:textColor="@color/on_primary"
        android:backgroundTint="@color/primary"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>