<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInOrLogInActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            app:tint="@color/darkGreen"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lybuttons"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <com.google.android.material.button.MaterialButton
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:backgroundTint="@color/diedGreen"
            app:cornerRadius="8dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:backgroundTint="@color/darkGreen"
            app:cornerRadius="8dp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:text="@string/made_by_vazgen_and_francisco"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_revert"
        android:padding="12dp"
        app:tint="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/volver_atr_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>