<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    tools:context=".UpdateWeight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:background="@color/surface"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center_horizontal"

        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewPes"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/introduce_tu_peso_en_kg"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNuevoPeso"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/continuar"
            android:textColor="@color/on_primary"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/primary"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_revert"
        android:padding="12dp"
        app:tint="@color/text_primary"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/volver_atr_s"
        android:layout_gravity="top|start" />

</FrameLayout>